@@ -29,6 +29,7 @@ Hendrik Jaeger (henk)
 hofheinz
 Ink (inknoir)
 Jason W. Ryan
+Jeet Sukumaran (jeetsukumaran)
 Jeffrey C. Albro (jalbro)
 Jing Liu
 Jiri Wiesner (jiriwiesner)
