@@ -413,7 +413,10 @@ background_and_wait_for_errors(char cmd[], int cancellable)
 		}
 		else
 		{
-			const int status = get_proc_exit_status(pid);
+			/* Don't use "const int" variables with WEXITSTATUS() as they cause
+			 * compilation errors in case __USE_BSD is defined.  Anonymous type with
+			 * "const int" is composed via compound literal expression. */
+			int status = get_proc_exit_status(pid);
 			result = WEXITSTATUS(status);
 		}
 	}
